--- a/product1.html
+++ b/product1.html
@@ -84,7 +84,7 @@
     </div>
 
 
-    <div class="sections-title my-8 sm:my-0 sm:mt-8 md:ml-[30px] sm:ml-0 text-2xl sm:text-xl leading-6 flex">
+    <div class="sections-title my-8 sm:my-0 sm:mt-8 md:ml-[30px] ss:ml-[4%] sm:ml-0 text-2xl sm:text-xl leading-6 flex">
         <div class="container">
             <a href="./index.html" class="text-white cursor-pointer">Главная / </a>
             <a href="./catalog.html" class="text-white cursor-pointer">Каталог продукции / </a>
@@ -94,10 +94,11 @@
 
 
 
-    <div class="dron-section mt-5 mb-24">
+    <div class="dron-section mt-5 mb-24 md:mb-8">
         <div class="container">
             <div class="drone-sec-box flex lg:flex-wrap max-w-full">
-                <div class="drone-img flex flex-col basis-[57%] lg:basis-[75%] gap-5 mr-4 lg:mx-auto lg:mb-[72px]">
+                <div
+                    class="drone-img flex flex-col basis-[57%] lg:basis-[75%] md:basis-[84%] ss:basis-[90%] gap-5 mr-4 lg:mx-auto lg:mb-[72px]">
                     <div class="drone-big-img">
                         <img class="w-[95%] border-solid border-[0.5px] hover:rounded-xl transition-all border-borderdrone hover:border-lightgreen px-1 py-1 inline-block cursor-pointer hover:bg-black"
                             src="img/product/product-one/agr-a22-one.png" alt="product-one" id="lg-img"
@@ -112,53 +113,65 @@
                             src="img/product/product-one/agr-a22-three.png" alt="product-one" onclick="droneBox(this)">
                     </div>
                 </div>
-                <div class="drone-about basis-[47%] lg:basis-[75%] lg:ml-[12%] relative">
-                    <div class="drone-name text-[34px] leading-8 mb-5">Дрон опрыскиватель AGR A22</div>
+                <div class="drone-about basis-[47%] lg:basis-[75%] lg:ml-[12%] md:ml-[8%] sm:ml-[5%] relative">
+                    <div class="drone-name text-[34px] sm:text-3xl leading-8 mb-5">Дрон опрыскиватель AGR A22</div>
                     <div class="drone-articul text-lg leading-4 mb-10">Артикуль: 12358</div>
-                    <div class="drone-propertys flex flex-wrap gap-5 mb-16">
-                        <div class="drone-property flex items-end basis-[45%]">
-                            <img class="mr-[16px]" src="img/product/property-1.png" alt="property">
-                            <p class="text-lg leading-4">Бак для распыления 22 л</p>
+                    <div class="drone-propertys flex flex-wrap gap-5 md:gap-4 mb-16 ss:mb-12">
+                        <div
+                            class="drone-property flex items-end md:items-center basis-[45%] ss:basis-[73%] sm:basis-[100%]">
+                            <img class="md:w-[17%] ss:w-[14%] sm:w-[13%] mr-[16px]" src="img/product/property-1.png"
+                                alt="property">
+                            <p class="text-lg md:text-base leading-4">Бак для распыления 22 л</p>
                         </div>
-                        <div class="drone-property flex items-end basis-[45%]">
-                            <img class="mr-[16px]" src="img/product/property-2.png" alt="property">
-                            <p class="text-lg leading-4">Ширина захвата 5-8 м</p>
+                        <div
+                            class="drone-property flex items-end md:items-center basis-[45%] ss:basis-[73%] sm:basis-[100%]">
+                            <img class="md:w-[17%] ss:w-[14%] sm:w-[13%] mr-[16px]" src="img/product/property-2.png"
+                                alt="property">
+                            <p class="text-lg md:text-base leading-4">Ширина захвата 5-8 м</p>
                         </div>
-                        <div class="drone-property flex items-end basis-[45%]">
-                            <img class="mr-5" src="img/product/property-3.png" alt="property">
-                            <p class="text-lg leading-4">Высокоточное позиционирование</p>
+                        <div
+                            class="drone-property flex items-end md:items-center basis-[45%] ss:basis-[73%] sm:basis-[100%]">
+                            <img class="md:w-[17%] ss:w-[14%] sm:w-[13%] mr-5" src="img/product/property-3.png"
+                                alt="property">
+                            <p class="text-lg md:text-base leading-4">Высокоточное позиционирование</p>
                         </div>
-                        <div class="drone-property flex items-end basis-[45%]">
-                            <img class="mr-4" src="img/product/property-4.png" alt="property">
-                            <p class="text-lg leading-4">Датчик высоты и обхода препятствий</p>
+                        <div
+                            class="drone-property flex items-end md:items-center basis-[45%] ss:basis-[73%] sm:basis-[100%]">
+                            <img class="md:w-[17%] ss:w-[14%] sm:w-[13%] mr-4" src="img/product/property-4.png"
+                                alt="property">
+                            <p class="text-lg md:text-base leading-4">Датчик высоты и обхода препятствий</p>
                         </div>
-                        <div class="drone-property flex items-end basis-[45%]">
-                            <img class="mr-[18px]" src="img/product/property-5.png" alt="property">
-                            <p class="text-lg leading-4">Воднепроницаемость</p>
+                        <div
+                            class="drone-property flex items-end md:items-center basis-[45%] ss:basis-[73%] sm:basis-[100%]">
+                            <img class="md:w-[17%] ss:w-[14%] sm:w-[13%] mr-[18px]" src="img/product/property-5.png"
+                                alt="property">
+                            <p class="text-lg md:text-base leading-4">Воднепроницаемость</p>
                         </div>
-                        <div class="drone-property flex items-end basis-[45%]">
-                            <img class="mr-2" src="img/product/property-6.png" alt="property">
-                            <p class="text-lg leading-4">Скорость полета 10 м/с</p>
+                        <div
+                            class="drone-property flex items-end md:items-center basis-[45%] ss:basis-[73%] sm:basis-[100%]">
+                            <img class="md:w-[17%] ss:w-[14%] sm:w-[13%] mr-4" src="img/product/property-6.png"
+                                alt="property">
+                            <p class="text-lg md:text-base leading-4">Скорость полета 10 м/с</p>
                         </div>
                     </div>
                     <div class="">Все характеристики</div>
                     <div class="line absolute w-[105px] bg-bgline h-[1px] mt-2"></div>
-                    <div class="counter flex items-center mt-10 mb-12">
-                        <div class="text-[30px] leading-[30px] mr-[6px]">$</div>
-                        <div id="counter-price_one" class="text-[30px] leading-[30px] mr-10">$</div>
+                    <div class="counter flex items-center mt-10 ss:mt-6 mb-12 ss:mb-8">
+                        <div class="text-[30px] ss:text-2xl leading-[30px] mr-[6px]">$</div>
+                        <div id="counter-price_one" class="text-[30px] ss:text-2xl leading-[30px] mr-10"></div>
                         <div
                             class="counter-count border flex border-borderdrone gap-4 px-3 py-[2px] text-[34px] leading-[26px]">
                             <button id="minus">-</button>
-                            <div class="count text-2xl leading-6">1</div>
+                            <div class="count text-2xl ss:text-xl leading-6"></div>
                             <button id="plus">+</button>
                         </div>
                     </div>
-                    <div class="drone-buttons flex gap-5">
+                    <div class="drone-buttons flex gap-5 sm:gap-3">
                         <div
-                            class="add-btn border border-lightgreen bg-lightgreen text-white text-[28px] leading-7 px-8 xl:px-4 py-4 xl:py-3 w-fit hover:bg-black hover:text-lightgreen cursor-pointer transition-all">
+                            class="add-btn border border-lightgreen bg-lightgreen text-white text-[28px] md:text-xl ss:text-base sm:text-sm leading-7 md:leading-5 ss:leading-4 px-8 xl:px-4 sm:px-3 py-4 xl:py-3 w-fit hover:bg-black hover:text-lightgreen cursor-pointer transition-all">
                             Добавить в корзину</div>
                         <div
-                            class="buy-btn border border-lightgreen bg-none text-white text-[28px] leading-7 px-8 xl:px-4 py-4 xl:py-3 w-fit hover:bg-black hover:text-lightgreen cursor-pointer transition-all">
+                            class="buy-btn border border-lightgreen bg-none text-white text-[28px] md:text-xl ss:text-base sm:text-sm leading-7 md:leading-5 ss:leading-4 px-8 xl:px-4 sm:px-3 py-4 xl:py-3 w-fit hover:bg-black hover:text-lightgreen cursor-pointer transition-all">
                             Купить в 1 клик</div>
                     </div>
                 </div>
@@ -172,94 +185,62 @@
     <section class="drone-advantage mt-8 sm:mt-0">
         <div class="container">
 
-            <div class="swiper advantageSwiper">
+            <div class="swiper droneAdvSwiper hidden md:block">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
-                                <img class="adv-img" src="img/main/f-icon1.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Квалифицированные
-                                    сотрудники</h5>
+                            class="droneAdv-item-sw h-[60%] ss:h-[70%] basis-[60%] ss:basis-[75%] sm:basis-[85%] overflow-hidden text-white pl-5 pr-8 pt-[23px] pb-8  bg-bgflex rounded-lg cursor-pointer transition-[0.5s] relative">
+                            <div class="content z-10 relative">
+                                <div class="flex items-center mb-1 cursor-pointer">
+                                    <img src="img/product/adv-1.png" alt="">
+                                    <h5 class="ml-2 text-[22px] md:text-xl leading-5">Бесплатная доставка</h5>
+                                </div>
+                                <p class="text-base text-textflex leading-8 ml-11">Купить кважракоптер - получить
+                                    бесплатную
+                                    доставку
+                                </p>
                             </div>
-                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Все наши сотрудники
-                                имеют многолетний опыт
-                                работы в
-                                сфере беспилотной авиации.
-                                Нами было
-                                реализовано множество проектов различной тематики и самой различной сложности.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
-                                <img class="adv-img" src="img/main/f-icon2.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Высокотехнологичное
-                                    оборудование </h5>
+                            class="droneAdv-item-sw h-[60%] ss:h-[70%] basis-[60%] ss:basis-[75%] sm:basis-[85%] overflow-hidden text-white pl-5 pr-8 pt-[23px] pb-8  bg-bgflex rounded-lg cursor-pointer transition-[0.5s] relative">
+                            <div class="content z-10 relative">
+                                <div class="flex items-center mb-1 cursor-pointer">
+                                    <img src="img/product/adv-2.png" alt="">
+                                    <h5 class="ml-2 text-[22px] md:text-xl leading-5">Пробный первый полет</h5>
+                                </div>
+                                <p class="text-base text-textflex leading-8 ml-11">Краткое обучение и техника
+                                    безопасности</p>
                             </div>
-                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Наша компания
-                                использует современное
-                                оборудование,
-                                которое обеспечивает высокое качество в
-                                выполнении поставленных задач.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
-                                <img class="adv-img" src="img/main/f-icon3.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Экономия</h5>
+                            class="droneAdv-item-sw h-[60%] ss:h-[70%] basis-[60%] ss:basis-[75%] sm:basis-[85%] overflow-hidden text-white pl-5 pr-8 pt-[23px] pb-8  bg-bgflex rounded-lg cursor-pointer transition-[0.5s] relative">
+                            <div class="content z-10 relative">
+                                <div class="flex items-center mb-1 cursor-pointer">
+                                    <img src="img/product/adv-3.png" alt="">
+                                    <h5 class="ml-2 text-[22px] md:text-xl leading-5">Гарантия лучшей цены</h5>
+                                </div>
+                                <p class="text-base text-textflex leading-8 ml-11">Лучшая цена от официального
+                                    производителя</p>
                             </div>
-                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Использование
-                                беспилотных технологий экономит
-                                вам много
-                                времени и денег. За счет отсутствия
-                                технологической колеи сохраняется до 6% урожая. Снижение расхода препаратов до 30%</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
-                                <img class="adv-img" src="img/main/f-icon4.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Оперативность</h5>
+                            class="droneAdv-item-sw h-[60%] ss:h-[70%] basis-[60%] ss:basis-[75%] sm:basis-[85%] overflow-hidden text-white pl-5 pr-8 pt-[23px] pb-8  bg-bgflex rounded-lg cursor-pointer transition-[0.5s] relative">
+                            <div class="content z-10 relative">
+                                <div class="flex items-center mb-1 cursor-pointer">
+                                    <img src="img/product/adv-4.png" alt="">
+                                    <h5 class="ml-2 text-[22px] md:text-xl leading-5">Официальная гарантия</h5>
+                                </div>
+                                <p class="text-base text-textflex leading-8 ml-11">На всю продукцию представленную в
+                                    магазине
+                                </p>
                             </div>
-                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">За рабочую смену
-                                наши специалисты способны
-                                защитить
-                                более 1000 гектар ваших полей, кустарников и
-                                деревьев.</p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
-                                <img class="adv-img" src="img/main/f-icon5.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Собственное производство
-                                </h5>
-                            </div>
-                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Мы разрабатываем и
-                                производим беспилотные
-                                летательные
-                                аппараты, поэтому знаем все тонкости их
-                                работы и можем настроить их под конкретные задачи и потребности клиентов.</p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
-                                <img class="adv-img" src="img/main/f-icon6.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Свой сервис</h5>
-                            </div>
-                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Любой наш аппарат
-                                можно сдать на плановое
-                                техническое
-                                обслуживание или же в ремонт в наш
-                                собственный сервис, который гарантирует качество и оперативность выполнения работ.</p>
+                            <b style="top: 175.3px; left: 175.4px;" class="adv-style"></b>
                         </div>
                     </div>
                 </div>
