adding charakteric section

--- a/product1.html
+++ b/product1.html
@@ -182,7 +182,7 @@
 
 
 
-    <section class="drone-advantage mt-8 sm:mt-0">
+    <section class="drone-advantage mt-8 sm:mt-0 mb-28 md:mb-16">
         <div class="container">
 
             <div class="swiper droneAdvSwiper hidden md:block">
@@ -301,11 +301,26 @@
 
 
 
-    <div class="dron-about-section">
+    <div class="dron-about-section mb-24 md:mb-16">
         <div class="container">
-            <h1></h1>
-            <p></p>
-            <div><img src="" alt=""></div>
+            <h1 class="text-center text-5xl md:text-4xl sm:text-3xl leading-[48px] md:leading-10 mb-10 ss:mb-6">Дрон
+                опрыскиватель AGR A22
+            </h1>
+            <p class="text-center text-lg md:text-base sm:text-sm leading-8 md:leading-6 font-light mb-14 ss:mb-10">
+                A22RTK продолжает
+                превосходство классической
+                конструкции
+                сельскохозяйственного
+                беспилотника AGR. Имеет
+                литой корпус и
+                цельнолитое литье, что увеличивает максимальную нагрузку дрона до 22 кг. Недавно разработанное
+                Т-образное сопло выводит
+                эффективность работы на новый уровень; Интеллектуальная система управления полетом AG3Pro предназначена
+                для точного и
+                эффективного продвижения технологической модернизации и инноваций в развитии сельскохозяйственной
+                отрасли</p>
+            <div><img class="about-drone-img border-2 border-lightgreen" src="img/product/about-drone-img.jpg"
+                    alt="about-drone-img"></div>
         </div>
     </div>
 
@@ -313,22 +328,95 @@
 
     <div class="character">
         <div class="container">
-            <div class="character-items">
-                <div class="character-item"></div>
-                <div class="character-item"></div>
-                <div class="character-item"></div>
-                <div class="character-item"></div>
-                <div class="character-item"></div>
+            <div class="character-title text-5xl leading-[60px] mb-14 ml-[9%]">Характеристики</div>
+            <div class="character-items flex flex-col items-center gap-5">
+                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                    <div class="flex justify-between">
+                        <h3 class="character-about text-[34px] leading-8">Летательный аппарат</h3>
+                        <div><span class="plus-icon cursor-pointer block"></span></div>
+                    </div>
+                    <div class="sub-menu mt-[10px]">
+                        <div class="text-2xl">Общее название устройства (аппарата) для полётов в атмосфере или
+                            космическом
+                            пространстве. Принцип полёта — понятие
+                            определяющее категорию основных физических законов, принятых для описания движения заданного
+                            летающего объекта, в
+                            заданных условиях полёта. Принцип полёта определяется тем, каким образом и за счёт чего
+                            создаётся подъёмная сила.</div>
+                    </div>
+                </div>
+                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                    <div class="flex justify-between">
+                        <h3 class="character-about text-[34px] leading-8">Основные характеристики</h3>
+                        <span class="plus-icon cursor-pointer"></span>
+                    </div>
+                    <div class="sub-menu mt-[10px]">
+                        <div class="text-2xl">По разнообразию конструкции существует 4 основных типа беспилотных
+                            летательных
+                            аппаратов: Мультироторные –
+                            мультикоптерные дроны; Беспилотник с неподвижным крылом; Однороторный дрон – беспилотный
+                            вертолет; Гибридные дроны.
+                            Мультироторные – мультикоптерные дроны. Мультироторные дроны - наиболее распространенные
+                            типы дронов, которые
+                            используются как профессионалами, так и любителями</div>
+                    </div>
+                </div>
+                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                    <div class="flex justify-between">
+                        <h3 class="character-about text-[34px] leading-8">Функции БПЛА</h3>
+                        <span class="plus-icon cursor-pointer"></span>
+                    </div>
+                    <div class="sub-menu mt-[10px]">
+                        <div class="text-2xl">Беспилотный летательный аппарат — летательный аппарат без экипажа на
+                            борту.
+                            БПЛА могут обладать разной степенью
+                            автономности — от управляемых дистанционно до полностью автоматических, а также различаться
+                            по конструкции, назначению и
+                            множеству других параметров.</div>
+                    </div>
+                </div>
+                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                    <div class="flex justify-between">
+                        <h3 class="character-about text-[34px] leading-8">Комплектация</h3>
+                        <span class="plus-icon cursor-pointer"></span>
+                    </div>
+                    <div class="sub-menu mt-[10px]">
+                        <div class="text-2xl">Значение. составление комплекта, дополнение до комплекта ◆ Комплектация
+                            железнодорожного строительства рельсами, шпалами
+                            и прочими материалами. Вопрос комплектации войск будет решаться исключительно за счет
+                            сокращения числа отсрочек от
+                            призыва в армию. то же, что состав, комплект.</div>
+                    </div>
+                </div>
+                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                    <div class="flex justify-between">
+                        <h3 class="character-about text-[34px] leading-8">Отдельно приобретаются</h3>
+                        <span class="plus-icon cursor-pointer"></span>
+                    </div>
+                    <div class="sub-menu mt-[10px]">
+                        <div class="text-2xl">Спрос и предложение по-разному соотносятся на рынке. Если количество
+                            желающих и
+                            объем товаров равны, то стороны
+                            заключают сделку или договор купли-продажи. Но одна из величин может оказаться больше.
+                            Например, нужные клиентам товары
+                            есть на рынке, но они находятся в дефиците. Компании не могут повысить количество
+                            произведенных изделий, потому что у
+                            них не хватает сырья или производственных мощностей, чтобы создать необходимый объем.</div>
+                    </div>
+                </div>
             </div>
+            <div class="character-bg"></div>
+            <div class="character-bg-title"></div>
         </div>
     </div>
 
 
 
-    <section class="product mt-24 md:mt-16 sm:mt-12 md:mb-16">
+
+    <section class="similar-p mt-24 md:mt-16 sm:mt-12 md:mb-16">
         <div class="container">
-            <h3 class="text-5xl leading-[48px]">Похожие товары</h3>
-            <div class="swiper mySwiper">
+            <h3 class="text-5xl leading-10 mb-14">Похожие товары</h3>
+            <div class="swiper myproductSwiper hidden md:block">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
@@ -391,63 +479,68 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
             </div>
 
 
             <div class="p-box flex justify-between text-white mb-28 md:hidden">
-                <div class="p-items">
+                <div
+                    class="drone-items basis-[32%] md:basis-[48%] ss:basis-[70%] sm:basis-[78%] w-[32%] md:w-[48%] ss:w-[70%] sm:w-[78%] h-auto">
                     <div
-                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        class="drone-item box-border h-[99%] w-[99%] text-white bg-bgflex rounded-lg transition-[0.4s]">
                         <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d1.png"
-                                alt="Dron1"></div>
-                        <div class="p-info ml-10">
-                            <div class="p-name leading-8 text-3xl mt-7">Агродрон AGR A22</div>
-                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                                alt="Dron1">
+                        </div>
+                        <div class="p-info px-[30px]">
+                            <div class="p-name leading-8 text-2xl xl:text-xl mt-7">Агродрон AGR A22</div>
+                            <div class="p-about mt-4 mb-5 text-[20px] xl:text-lg leading-9 xl:leading-8 font-normal">
                                 <p>Бренд: <span class="font-light">AGR</span></p>
                                 <p> Модель: <span class="font-light">101-0101</span></p>
                             </div>
-                            <div class="p-price text-3xl leading-7 mb-12">$15001.27</div>
+                            <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$15001.27</div>
                             <button
-                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
                                 в корзину</button>
                         </div>
                     </div>
                 </div>
-                <div class="p-items">
+                <div
+                    class="drone-items basis-[32%] md:basis-[48%] ss:basis-[70%] sm:basis-[78%] w-[32%] md:w-[48%] ss:w-[70%] sm:w-[78%] h-auto">
                     <div
-                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        class="drone-item box-border h-[99%] w-[99%] text-white bg-bgflex rounded-lg transition-[0.4s]">
                         <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d2.png"
-                                alt="Dron1"></div>
-                        <div class="p-info ml-10">
-                            <div class="p-name leading-8 text-3xl mt-7">Дрон- Картограф STS M8</div>
-                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                                alt="Dron1">
+                        </div>
+                        <div class="p-info px-[30px]">
+                            <div class="p-name leading-8 text-2xl xl:text-xl mt-7">Дрон- Картограф STS M8</div>
+                            <div class="p-about mt-4 mb-5 text-[20px] xl:text-lg leading-9 xl:leading-8 font-normal">
                                 <p>Бренд: <span class="font-light">STS</span></p>
                                 <p> Модель: <span class="font-light">101-11</span></p>
                             </div>
-                            <div class="p-price text-3xl leading-7 mb-12">$18206.30</div>
+                            <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$18206.30</div>
                             <button
-                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
                                 в корзину</button>
                         </div>
                     </div>
                 </div>
-                <div class="p-items">
+                <div
+                    class="drone-items basis-[32%] md:basis-[48%] ss:basis-[70%] sm:basis-[78%] w-[32%] md:w-[48%] ss:w-[70%] sm:w-[78%] h-auto">
                     <div
-                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        class="drone-item box-border h-[99%] w-[99%] text-white bg-bgflex rounded-lg transition-[0.4s]">
                         <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d3.png"
-                                alt="Dron1"></div>
-                        <div class="p-info ml-10">
-                            <div class="p-name leading-8 text-3xl mt-7">Дрон - Картограф STS M1550</div>
-                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                                alt="Dron1">
+                        </div>
+                        <div class="p-info px-[30px]">
+                            <div class="p-name leading-8 text-2xl xl:text-xl mt-7">Дрон - Картограф STS M1550
+                            </div>
+                            <div class="p-about mt-4 mb-5 text-[20px] xl:text-lg leading-9 xl:leading-8 font-normal">
                                 <p>Бренд: <span class="font-light">STS</span></p>
                                 <p> Модель: <span class="font-light">100-10</span></p>
                             </div>
-                            <div class="p-price text-3xl leading-7 mb-12">$13802.86</div>
+                            <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$13802.86</div>
                             <button
-                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
                                 в корзину</button>
                         </div>
                     </div>
